--- a/Vignette.Rmd
+++ b/Vignette.Rmd
@@ -37,7 +37,7 @@ install.packages("your_package_name_here")
 
 After installing the necessary packages, load these libraries by calling
 
-```{r eval=FALSE, echo=TRUE}
+```{r eval=FALSE, echo=TRUE, message=FALSE}
 library(tidyverse)
 library(nimble)
 library(coda)
@@ -177,7 +177,86 @@ head(masked_dfs[[7]][[3]])
 
 ### Step 4: Fit the data 
 
+With the simulated data stored in the global environment, we can now fit models to the simulated datasets using NIMBLE via the wrapper function `run_sims`. This function requires specification of the following arguments: 
+
+- `data_list`: The list of masked datasets output from `simulate_BySpeciesValidation`. 
+- `zeros_list`: The list of site-visit-true-autoID combinations that were never observed. This is the `zeros` object output from `simulate_BySpeciesValidation`.
+- `theta_scenario_id`: An ID to show which classifier the scenario is under. This must match the name of the directory `.../ThetaID` if you want to save model fits and summaries.
+- `parallel`: A logical indicating whether models should be fit in parallel (default setting is TRUE). If you have many datasets and many scenarios, we recommend this setting. 
+- `initialize_lambda_near_naive_val`: A logical indicating whether to initialize chains for $\lambda_k$ near the naive average count of recordings from each species. 
+- `n_iter`: The number of iterations for each chain in the MCMC. Default value is 2000.
+- `nburn`: The number of warmup iterations before MCMC draws are retained. By default, half of `n_iter` draws are discarded as warmup.
+- `thin`: Thinning of the MCMC chains. 
+- `save_fits`: A logical denoting whether or not to save the draws from individual fitted models. If TRUE, you must have the file structure described in Step 2. Fits will be saved as RDS objects that can be read in later. Default value is FALSE.  
+- `save_individual_summaries_list`: A logical indicating whether to save individual summary lists that are output after each validation scenario. Defalut value is FALSE
+- `directory`: where saved fits and summaries should be saved. Required if `save_fits = TRUE` or `save_individual_summaries_list = TRUE`. Default value is the current working directory given by `here::here()`.
+
+An example of using this function with the simulated data from step 3 is given below: 
+
+```{r eval = FALSE}
+source("Model Fitting & Simulation/run_sims.R")
+sims_output <- run_sims(data_list = fake_data$masked_dfs, zeros_list = fake_data$zeros, 
+         DGVs = list(lambda = lambda, psi = psi, theta = test_theta2), 
+         theta_scenario_id = 1, parallel = TRUE, 
+         niter = 10000, thin = 5,
+         save_fits = FALSE, 
+         save_individual_summaries_list = FALSE, 
+         directory = paste0(here::here(), "/Testing"))
+```
+
 ### Step 5: Visualize simulations 
 
+Once the simulation study is complete, you can visualize the results using two functions, `visualize_parameter_group` and `visualize_single_parameter`. The first one is useful for examining an entire set of parameters, such as all relative activity parameters. The set of expected inputs for `visualize_parameter_group` are: 
+
+- `sim_summary`: A dataframe in the format of the summaries output by `run_sims`. Column names must match those of the `run_sims` output. 
+- `pars`: The name of the parameter "group" to be visualized (e.g, "psi", "lambda" or "theta").
+- `theta_scenario`: The $\Theta$ classifier ID.
+- `scenarios`: Which scenarios to visulaize? 
+- `convergence_threshold`: What value should $\hat{R}$ be below to be considered "converged"? Default value is 1.1. This value matters because only model fits where all parameter values are below the `convergence_threshold` are used for visualization. 
+
+We can visualize the inference for the relative activity parameters in the first three scenarios in our simulation study above by running the code below. Note that we have set `convergence_threshold` to be unrealistically high for illustration purposes. Typically, the default value of 1.1 is as high of an $\hat{R}$ value as possible for the MCMC chains to be considered "converged".  
+
+```{r eval=TRUE, echo=FALSE, message=FALSE}
+# Sneaky way to get around the knitting/compilation problem
+biglist <- list()
+for(i in 1:4){
+  biglist[[i]] <- readRDS(paste0(here::here(), "/Testing/Theta1/summary_df_for_scenario_",i,".rds"))
+}
+
+sims_output <- do.call(bind_rows, biglist)
+```
+
+```{r}
+source("Summary Figures/visualize_sims.R")
+visualize_parameter_group(sim_summary = sims_output, 
+                          pars = "lambda", 
+                          theta_scenario = 1, 
+                          scenarios = 1:3, 
+                          convergence_threshold = 1.6)
+```
+
+The features of the plot are as follows: 
+
+- Facet grids: parameters
+- X-axis: Manual verification scenario
+- y-axis: parameter values
+- Small grey error bars: 95% posterior interval for an individual model fit where all parameters were below `convergence_threshold`. 
+- Colored error bars: average 95% posterior interval across all converged models under that scenario. 
+- Color: Coverage, or the rate at which 95% posterior intervals contain the true data-generating parameter value. 
+- Black dots: the true value of the parameter
+- Red dots: average posterior mean 
+
+If you would like to visualize a single parameter, use `visualize_single_parameter`, which takes the same arguments as the previous visualization function: 
+
+```{r}
+# note the space between the indices for theta[2, 3]
+visualize_single_parameter(sims_output, par = "theta[2, 3]", 
+                           theta_scenario = 1, 
+                           scenarios = 1:3, 
+                           convergence_threshold = 1.2)
+```
+Note that in scenario 2, only one dataset yielded a fitted model where all parameters were below `convergence_threshold`. Because of this, the average posterior interval is the same as the individual grey error bar (which is hidden).
+
 ## Using saved datasets and model fits 
+
 
