--- a/Vignette/Vignette.Rmd
+++ b/Vignette/Vignette.Rmd
@@ -23,8 +23,9 @@ institute:
     - norock: U.S. Geological Survey, Northern Rocky Mountain Science Center, Bozeman, MT, USA
 date: "`r Sys.Date()`"
 output: 
-  pdf_document: 
+  bookdown::pdf_document2: 
     number_sections: yes
+    keep_tex: no
     toc: no
     pandoc_args:
       - '--lua-filter=lua-filters/scholarly-metadata.lua'
@@ -211,7 +212,7 @@ Above, `PathToYourWorkingDirectory` is replaced with the file path to your worki
 ```
 See the Testing folder in this repo for an example (ignore the blank placeHold.txt files, which are simply there to retain the empty directory structure). Here, we use numbers for the classifier scenarios. The first scenario has `ID=1`, giving the paths to the necessary directories `your/working/directory/Testing/Theta1/fits` and `your/working/directory/Testing/Theta1/individual_summaries`.
 
-## Step 3: Simulate data
+## Step 3: Simulate data {dataSimulation}
 
 With the required folder structure set up, we can now simulate data using stratified-by-species validation. This is accomplished using the `simulate_validatedData` function. Load this function by running
 
@@ -360,7 +361,7 @@ fit_1_1 <- readRDS("../Testing/Theta1/fits/fit_1_1.rds")
 bayesplot::mcmc_dens_overlay(fit_1_1, pars = "lambda[1]")
 ```
 
-To see a traceplot for all $lambda$ parameters, run the following:
+To see a traceplot for all $\lambda$ parameters, run the following:
 
 ```{r}
 bayesplot::mcmc_trace(fit_1_1, regex_pars = "lambda")
@@ -410,7 +411,7 @@ visualize_parameter_group(sim_summary = sims_output,
                           pars = "lambda", 
                           theta_scenario = 1, 
                           scenarios = 1:4, 
-                          convergence_threshold = 1.1) # for illustration only! 
+                          convergence_threshold = 1.1)
 ```
 
 The features of the plot are as follows:
@@ -479,11 +480,11 @@ $$\Theta = \begin{bmatrix}
   0.0002 & 0.0003 & 0.0002 & 0.9650 \\
 \end{bmatrix}.$$
 
-However, the first row sums to 0.788 + 0.176 + 0.0245 + 0.0014 $\approx$ `r round(0.788 + 0.176 + 0.0245 + 0.0014, 3)`. The remaining 0.01 can be divided by four and added to each entry, so that the first row of $\Theta$ is now $(0.7905, 0.1785, 0.027, 0.0039).$ This process can be repeated to obtain an empirically-informed classification matrix. Alternatively, simulated matrices can be simulated in `test_theta2` with the entries of the matrix inside the call to apply adjusted to yield classification matrices that align with expert opinions.
+However, the first row sums to 0.788 + 0.176 + 0.0245 + 0.0014 $\approx$ `r round(0.788 + 0.176 + 0.0245 + 0.0014, 3)`. The remaining 0.01 can be divided by four and added to each entry, so that the first row of $\Theta$ is now $(0.7905, 0.1785, 0.027, 0.0039).$ This process can be repeated to obtain an empirically-informed classification matrix. Alternatively, simulated matrices can be simulated using the same procedure as `test_theta2` (Section \@ref:dataSimulation). Using this procedure, one must ensure the entries of the matrix in the first argument of `apply` are adjusted to yield classification matrices that align with expert opinions.
 
 With the parameter values chosen, we begin data simulation. Note that the `scenarios` argument is now a vector, in contrast with the proceeding example.
 
-```{r}
+```{r message=FALSE}
 psi <- c(0.633, 0.612, 0.849, 0.898)
 lambda <- c(5.934, 4.160, 14.25, 28.25)
 
@@ -501,7 +502,6 @@ Theta_FE <- matrix(
 nsites <- 100
 nvisits <- 4
 nspecies <- length(psi)
-
 
 FE_data <- simulate_validatedData(
   n_datasets = 5, 
@@ -536,7 +536,8 @@ FE_model_fits <- run_sims(
 We can visualize the results from the model for each parameter group:
 
 ```{r echo=FALSE}
-# For faster knitting
+# For faster knitting. Note that eval=FALSE in previous chunk. If you change 
+# this setting and refit the model, your results may change! 
 #saveRDS(FE_model_fits, paste0(here("Testing", "FixedEffortExample"), "/FE_model_fits.rds"))
 FE_model_fits <- readRDS(paste0(here("Testing", "FixedEffortExample"), "/FE_model_fits.rds"))
 ```
@@ -545,20 +546,39 @@ FE_model_fits <- readRDS(paste0(here("Testing", "FixedEffortExample"), "/FE_mode
 visualize_parameter_group(FE_model_fits, pars = "lambda", theta_scenario = 1, scenarios = 1:4)
 ```
 
+The first fixed effort design, where 5% of all recordings from the first detector-night at each site were validated did not provide enough information for any models fit to the simulated data sets to have $\hat{R} \leq 1.1$ for all parameters after 2000 MCMC iterations. This is shown in the faceted plot of relative activity parameters -- the first manual verification scenario is missing from the $x$-axis. For all other validation scenarios, all parameters in all models converged, as evidenced by the presence of five grey intervals in the background for each parameter-scenario combination. Based on the absence of a red point for any relative activity parameter in any of the validation scenarios, minimal estimation error is expected for relative activity under validation scenarios 2-4. For species 1-3 (i.e., EPFU, LACI, and LANO), the figure shows high coverage. Coverage is slightly low for species 4 (MYLU), but this is likely due to only five datasets being fit for this vignette -- if one 95% posterior interval fails to capture the true parameter value, coverage is reduced to 80%, as in this example figure. When using these software tools for evaluating management decisions, we recommend fitting models to at least 50-100 datasets to ensure that estimates of long-run behavior (e.g., coverage or expected estimation error) are reliable. 
+
 ```{r}
 visualize_parameter_group(FE_model_fits, pars = "psi", theta_scenario = 1, scenarios = 1:4)
 ```
+
+The visualization of inference for $\psi_k$ exhibits similar characteristics to the plot for $\lambda,$ especially with regard to convergence of MCMC algorithms. However, we may expect slightly higher estimation error, especially for $\psi_1$, which is the occurrence probability of EPFU. This estimation error does not appear to change across the various validation scenarios. However, coverage for $\psi_1$ improves with greater validation effort (coverage = 80% in scenario 2, but is 100% in scenario 3). Coverage is slightly low for $\psi_2$ across all validation scenarios. Again, these results may change when a greater number of datasets are used for the simulations, which warrants follow-up. If results remain the same after fitting models to 50 or more datasets, one might consider leaning towards validation scenario 3 based on the simulation results for $\psi_1$. 
 
 ```{r}
 visualize_parameter_group(FE_model_fits, pars = "theta", theta_scenario = 1, scenarios = 1:4)
 ```
 
-Note the number of recordings simulated under each scenario:
+Typically, the misclassification parameters in the $\Theta$ matrix are regarded as nuisance parameters. However, reliable inference for all parameters is desireable, and the visualization of the misclassification parameters further suggests that the 3rd validation scenario may be the best option. Often, this level of validation effort leads to near-nominal coverage of 95% posterior intervals and minimal estimation error, but requires fewer recordings be validated than validation scenario 4.  The exceptions are $\theta_{34}$ (third row, fourth column) and $\theta_{41}$ (fourth row, first column), which have coverage slightly below nominal levels under validation scenario 3.  as noted above this is likely an artifact of the very small number of datasets used in this example.  
+
+We can examine the expected number of validated recordings (for this species assemblage) using the `summarize_n_validated` function: 
 
 ```{r}
 summarize_n_validated(FE_data$masked_dfs)
 ```
 
+If the decision is made to use a fixed-effort design, with the third level of validation effort investigated in these scenarios, then around 2200 recordings will need to be validated. If this is infeasible, additional simulations could be undertaken to fine-tune the validation effort to a lower level (somewhere between validation scenario 2 and validation scenario 3) while also ensuring near nominal coverage and minimal estimation error. 
+
+# Conclusion 
+
+We have demonstrated the use of the ValidationExplorer software tool through two examples. Note that with any simulation study, including those conducted using the ValidationExplorer, results are conditional on the settings and assumptions. In the case of the count-detection model framework, the assumptions are 
+
+- The occurrence of species within a site are independent; the presence of one species carries no information about the presence or absence of another. 
+- For any one species, its occurrence at one location is independent of its occurrence at any other location (independence across sites).
+- Visits to a site (i.e., detector nights) are independent. 
+- Recordings within the same site-visit are independent. This holds regardless of whether a recording is validated or remains ambiguous (only has an autoID label). 
+- The count of recordings generated by a species in a single detector night is a Poisson random variable. 
+
+\noindent The settings include the number of datasets used in the simulations, the assumed characteristics of the species assemblage (i.e., the values for each $\psi_k$ and $\lambda_k$) and classifier ($\Theta$), and the number of sites and visits. Our hope is that the ValidationExplorer provides a useful tool for assessing the merits of various validation designs, so that effort can be thoughtfully assigned based on program goals and monitoring objectives. Ultimately, we hope that this software streamlines the bat acoustic workflow and allows for efficient processing of information. 
 
 # References
 
